---
config:
  layout: elk
  elk:
    mergeEdges: false
    nodePlacementStrategy: BRANDES_KOEPF
    considerModelOrder: PREFER_EDGES
  class:
    defaultRenderer: elk
    nodeSpacing: 50
    rankSpacing: 70
---
classDiagram
direction TB

class BBox {
  -x: float
  -y: float
  -width: float
  -height: float
}
note for BBox "位置と大きさを表す矩形領域"

class BaseNode {
  -text: str
  -bbox: BBox
}
note for BaseNode "全ノードに共通する表示情報"

class Node {
  -children: list~BaseNode~
}
note for Node "子ノードを共有可能な形で保持"

class Root {
  -children: list~BaseNode~
}
note for Root "表示開始点として明示されるノード"

class Leaf
note for Leaf "子を持たない末端ノード"

BaseNode <|-- Node
BaseNode <|-- Root
BaseNode "0..*" --o Node : children
BaseNode "0..*" --o Root : children
BaseNode <|-- Leaf
BaseNode *-- BBox : bbox

class Desktop {
  -windowSizeBBox: BBox
  -windowCanvasBBox: BBox
  -zoomScale: float
}
note for Desktop "メイン画面の表示範囲と拡大率を保持"

Desktop *-- BBox : windowSizeBBox
Desktop *-- BBox : windowCanvasBBox

class NodeEditorState {
  -selectedNode: BaseNode
  -editingText: str
  -popupBBox: BBox
}
note for NodeEditorState "選択ノードの編集状態を管理"

class Model {
  -sourceText: str
  -nodes: list~BaseNode~
  -spacing: float
  -canvasBBox: BBox
  -outputFile: Path | None
  -desktop: Desktop
  -nodeEditorState: NodeEditorState | None
}
note for Model "アプリケーション全体の状態を保持"

Model o-- "0..*" BaseNode : nodes
Model *-- Desktop : desktop
Model *-- "0..1" NodeEditorState : nodeEditorState
Model *-- BBox : canvasBBox

class Parser
note for Parser "元テキストをノード一覧へ変換"

Parser ..> BaseNode : creates

class LayoutCalculator {
  -measuredSizeCache
  -parentsByNode
  -layoutVersion: int
}
note for LayoutCalculator "ノードの配置とbboxを計算"

LayoutCalculator ..> BaseNode : calculates bbox
LayoutCalculator ..> Desktop : initial bounds

class BBoxCalculator
note for BBoxCalculator "選択範囲のbboxを算出"

BBoxCalculator ..> BaseNode : reads bbox
BBoxCalculator ..> BBox : creates

class GraphTraversal
note for GraphTraversal "共有ノードを考慮して到達可能なノードを探索"

GraphTraversal ..> BaseNode : traverses

class ImageRenderer
note for ImageRenderer "選択ノードから到達可能な範囲を画像化"

ImageRenderer ..> BaseNode : selected node
ImageRenderer ..> GraphTraversal : collects reachable nodes
ImageRenderer ..> BBoxCalculator : image bounds

class ModelObserver {
  <<interface>>
}
note for ModelObserver "モデル更新の通知を受け取る"

class DesktopView {
  -model: Model
  -nodeEditorPopupView: NodeEditorPopupView
}
note for DesktopView "メイン画面とキャンバスを表示"

class NodeEditorPopupView
note for NodeEditorPopupView "選択ノードの編集画面を表示"

class Controller
note for Controller "操作をモデルの更新へ変換"

class ForestApp {
  -model: Model
  -desktopView: DesktopView
  -controller: Controller
}
note for ForestApp "MVC各要素を構成して起動"

ModelObserver <|.. DesktopView
ModelObserver <|.. NodeEditorPopupView
Model --> ModelObserver : notifies
DesktopView ..> Model : renders
NodeEditorPopupView ..> Model : renders
DesktopView *-- NodeEditorPopupView : nodeEditorPopupView
Controller --> Model : updates
ForestApp *-- Model : model
ForestApp *-- DesktopView : desktopView
ForestApp *-- Controller : controller

classDef mvc fill:#eaf2ff,stroke:#54749f,color:#20334d,stroke-width:1.5px
classDef core fill:#fff8e8,stroke:#8a7446,color:#3f3522,stroke-width:1.5px
cssClass "ForestApp,Model,NodeEditorState,Desktop,DesktopView,NodeEditorPopupView,Controller,ModelObserver" mvc
cssClass "BBox,BaseNode,Leaf,Node,Root,Parser,LayoutCalculator,BBoxCalculator,GraphTraversal,ImageRenderer" core
